--- a/index.html
+++ b/index.html
@@ -125,5 +125,7 @@
 
     </div>
     <script src="script.js"></script>
+
+    <iframe src="https://scratch.mit.edu/projects/900730575/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
 </body>
 </html>
