--- a/index.html
+++ b/index.html
@@ -123,11 +123,17 @@
             </div>
         </footer>
 
+        <!-- Juego embebido: LEGENDARY BALL FIGHTERS X -->
+        <section id="game" class="panel game-section" aria-label="Juego: LEGENDARY BALL FIGHTERS X">
+            <h2>Mientras espera, puede jugar un pequeño juego que desarrolle mi primer año de universidad llamado LEGENDARY BALL FIGHTERS X</h2>
+            <div class="game-wrapper">
+                <div class="game-card">
+                    <iframe src="https://scratch.mit.edu/projects/900730575/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen title="LEGENDARY BALL FIGHTERS X"></iframe>
+                </div>
+            </div>
+        </section>
+
     </div>
     <script src="script.js"></script>
-     <div class="ssl-badge">
-        <iframe src="https://scratch.mit.edu/projects/900730575/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>   
-     </div>
-    
 </body>
 </html>
