--- a/index.html
+++ b/index.html
@@ -129,6 +129,11 @@
             <div class="game-wrapper">
                 <div class="game-card">
                     <iframe src="https://scratch.mit.edu/projects/900730575/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen title="LEGENDARY BALL FIGHTERS X"></iframe>
+                    <div class="game-controls" aria-label="Controles del juego">
+                        <p><strong>Controles:</strong></p>
+                        <p>"Q" para disparar</p>
+                        <p>"W" "A" "S" "D" para moverte</p>
+                    </div>
                 </div>
             </div>
         </section>
