--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                     <li><a href="#perfil">[02_PERFIL]</a></li>
                     <li><a href="#tecnica">[03_INFO_TÉCNICA]</a></li>
                     <li><a href="#contacto">[04_CONTACTO]</a></li>
+                    <li><a href="actividades.html">[05_ACTIVIDADES]</a></li>
                 </ul>
             </nav>
         </header>
