--- a/Parcial1/actividad6.html
+++ b/Parcial1/actividad6.html
@@ -22,7 +22,7 @@
                     <p class="subtitle">> ALUMNO: [Coronado Noriega Jesús Olaf - 178991]</p>
                 </div>
                 <div style="text-align: right; min-width: 150px;">
-                    <a href="actividades.html" class="cyber-btn" style="font-size: 0.8rem;">
+                    <a href="../actividades.html" class="cyber-btn" style="font-size: 0.8rem;">
                         << VOLVER A LISTA
                     </a>
                 </div>
