--- a/actividades.html
+++ b/actividades.html
@@ -48,12 +48,12 @@
             <div id="parcial1" class="tab-content" style="display: block;">
                 <h3>// LISTA_DE_TAREAS_P1</h3>
                 <ul class="activity-list">
-                    <li><a href="actividad1.html">> ACTIVIDAD 1: REPORTE TÉCNICO: EQUIFAX</a></li>
-                    <li><a href="actividad2.html">> ACTIVIDAD 2: ESCENARIOS</a></li>
-                    <li><a href="actividad3.html">> ACTIVIDAD 3: IPTABLES FIREWALL</a></li>
-                    <li><a href="actividad4.html">> ACTIVIDAD 4: REGLAS DE FIREWALL</a></li>
+                    <li><a href="Parcial1/actividad1.html">> ACTIVIDAD 1: REPORTE TÉCNICO: EQUIFAX</a></li>
+                    <li><a href="Parcial1/actividad2.html">> ACTIVIDAD 2: ESCENARIOS</a></li>
+                    <li><a href="Parcial1/actividad3.html">> ACTIVIDAD 3: IPTABLES FIREWALL</a></li>
+                    <li><a href="Parcial1/actividad4.html">> ACTIVIDAD 4: REGLAS DE FIREWALL</a></li>
                     <li class="disabled-link"    >> ACTIVIDAD 5: [PENDIENTE / OFFLINE] <i class="fas fa-ban"></i></li>
-                    <li><a href="actividad6.html">> ACTIVIDAD 6: METODOLOGÍAS</a></li>
+                    <li><a href="Parcial1/actividad6.html">> ACTIVIDAD 6: METODOLOGÍAS</a></li>
                 </ul>
             </div>
 
