--- a/actividades.html
+++ b/actividades.html
@@ -52,8 +52,8 @@
                     <li><a href="Parcial1/actividad2.html">> ACTIVIDAD 2: ESCENARIOS</a></li>
                     <li><a href="Parcial1/actividad3.html">> ACTIVIDAD 3: IPTABLES FIREWALL</a></li>
                     <li><a href="Parcial1/actividad4.html">> ACTIVIDAD 4: REGLAS DE FIREWALL</a></li>
-                    <li class="disabled-link"    >> ACTIVIDAD 5: [PENDIENTE / OFFLINE] <i class="fas fa-ban"></i></li>
-                    <li><a href="Parcial1/actividad6.html">> ACTIVIDAD 6: METODOLOGÍAS</a></li>
+                    <li><a href="Parcial1/actividad5.html">> ACTIVIDAD 5: METODOLOGÍAS</a></li>
+                    <li><a href="Parcial1/actividad6.html">> ACTIVIDAD 6: IPSec VPN</a></li>
                 </ul>
             </div>
 
